wip: versioned link resolution

--- a/docs/developer-docs/5.34.x/enterprise/auth0-integration.mdx
+++ b/docs/developer-docs/5.34.x/enterprise/auth0-integration.mdx
@@ -23,7 +23,7 @@ Auth0 integration replaces the default Cognito setup, and allows companies to ma
 ## 1) Prepare the Project
 
 Your project needs to be at version `5.34.0`, or greater, to use this feature.
-Please follow the [upgrade guide](../release-notes/upgrade-webiny) to upgrade your project to the appropriate version.
+Please follow the [upgrade guide](/docs/{version}/release-notes/upgrade-webiny) to upgrade your project to the appropriate version.
 
 Alternatively, you can create a new `>=5.34.0` project, by running:
 
