--- a/docs/release-notes/5.13.0/changelog.mdx
+++ b/docs/release-notes/5.13.0/changelog.mdx
@@ -22,7 +22,7 @@ Please check the [Webiny 5.13.0 migration guide](/docs/{version}/release-notes/5
 The highlight of this release - we bring you three brand new scaffolds that are focused on aiding developers in custom application development. The three scaffolds are:
 
 - [Full Stack Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application)
-- [GraphQL API](../../core-development-concepts/scaffolding/extend-graphql-api)
+- [GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api)
 - [React Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application)
 
 To get started, simply run the existing `webiny scaffold` command and pick the scaffold you need. On the other hand, if you'd like to learn more, you can check out the linked how-to guides.
@@ -64,7 +64,7 @@ export default new GraphQLSchemaPlugin<Context>({
 
 Except for the ability to interact with the `context` object in a type-safe manner, another benefit of this approach is easier usage. All of the properties of the `context` object will now be shown by your IDE, in an autocomplete dropdown menu.
 
-The existing guides that cover extending GraphQL APIs were also updated, so make sure to [check them out](../../core-development-concepts/extending-and-customizing/extend-graphql-api) to learn more:
+The existing guides that cover extending GraphQL APIs were also updated, so make sure to [check them out](/docs/{version}/core-development-concepts/extending-and-customizing/extend-graphql-api) to learn more:
 
 ### Yarn 3 Support ([#1862](https://github.com/webiny/webiny-js/pull/1862))
 
