--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -32,7 +32,7 @@ Once completed, the exported pages can be imported in a different environment or
 
 <Alert type="info">
 
-To learn more about environments in general, check out the [Environments](../../infrastructure/basics/environments) key topic.
+To learn more about environments in general, check out the [Environments](/docs/{version}/infrastructure/basics/environments) key topic.
 
 </Alert>
 
@@ -103,7 +103,7 @@ Available options to send are `createdOn_ASC`, `createdOn_DESC`, `savedOn_ASC` a
 
 ### Pulumi CLI Is Now Downloaded Into Project Root's `.webiny` Folder ([#1947](https://github.com/webiny/webiny-js/pull/1947))
 
-To deploy necessary cloud infrastructure, by default, Webiny relies on [Pulumi](../../infrastructure/pulumi-iac/iac-with-pulumi), a modern infrastructure as code framework.
+To deploy necessary cloud infrastructure, by default, Webiny relies on [Pulumi](/docs/{version}/infrastructure/pulumi-iac/iac-with-pulumi), a modern infrastructure as code framework.
 
 For every Webiny project, the framework is downloaded automatically, and, prior to this release, all of the related binaries would be downloaded into project's `node_modules/@webiny/pulumi-sdk/pulumi` folder. And although this works, over time, we've noticed a couple of interesting issues with this solution:
 
@@ -114,7 +114,7 @@ Because of these, from now on, all of the Pulumi CLI related binaries will be do
 
 <Alert type="info">
 
-Once your project has been upgraded to `5.16.0`, upon running the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) or the [`webiny watch`](../../core-development-concepts/basics/watch-command) command, the Pulumi CLI will be re-downloaded. This is normal and will happen even if you already had the Pulumi CLI downloaded in the mentioned `node_modules/@webiny/pulumi-sdk/pulumi` folder.
+Once your project has been upgraded to `5.16.0`, upon running the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) or the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command, the Pulumi CLI will be re-downloaded. This is normal and will happen even if you already had the Pulumi CLI downloaded in the mentioned `node_modules/@webiny/pulumi-sdk/pulumi` folder.
 
 </Alert>
 
@@ -122,9 +122,9 @@ Once your project has been upgraded to `5.16.0`, upon running the [`webiny deplo
 
 Webiny CLI also received a couple of neat improvements.
 
-For starters, we've introduced the `--allow-production` flag for the [`webiny watch`](../../core-development-concepts/basics/watch-command) command, which allows the user to run the command even with `prod` and `production` environments (by default, the command doesn't allow that).
+For starters, we've introduced the `--allow-production` flag for the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command, which allows the user to run the command even with `prod` and `production` environments (by default, the command doesn't allow that).
 
-Speaking of the [`webiny watch`](../../core-development-concepts/basics/watch-command) command, we've also made the logs displayed in the **Deploy** pane a bit cleaner and nicer:
+Speaking of the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command, we've also made the logs displayed in the **Deploy** pane a bit cleaner and nicer:
 
 ![webiny watch Command - The Improved Deploy Pane](./changelog/watch-deploy-pane-improvement.png)
 
