--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -49,7 +49,7 @@ We really hope you'll give this new version of Webiny Serverless CMS a try and t
 
 ### Overhaul of Existing Development Tools ([#1990](https://github.com/webiny/webiny-js/pull/1990), [#2028](https://github.com/webiny/webiny-js/pull/2028), [#1998](https://github.com/webiny/webiny-js/pull/1998), [#1989](https://github.com/webiny/webiny-js/pull/1989))
 
-A complete overhaul was done on the most important development-related Webiny CLI commands - [`webiny deploy`](../../core-development-concepts/basics/project-deployment) and [`webiny watch`](../../core-development-concepts/basics/watch-command). In short, you can expect both of these to be faster and also consume significantly less system resources.
+A complete overhaul was done on the most important development-related Webiny CLI commands - [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) and [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command). In short, you can expect both of these to be faster and also consume significantly less system resources.
 
 In case you would like to learn more, feel free to check out the links to closed pull requests:
 
@@ -82,7 +82,7 @@ For more information on this change, make sure to check out the [Additional Info
 
 ### Pulumi Command - Improved Handling of `--json` Flag
 
-Previously, when invoking the Pulumi CLI via the [`webiny pulumi`](../../core-development-concepts/basics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command) command and passing the `--json` flag to it, the final output would still include informative messages:
+Previously, when invoking the Pulumi CLI via the [`webiny pulumi`](/docs/{version}/core-development-concepts/basics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command) command and passing the `--json` flag to it, the final output would still include informative messages:
 
 ![Inappropriate output of the webiny pulumi command.](./images/pulumi-cli-json-issue.png)
 
@@ -100,7 +100,7 @@ The existing `--logs` flag now serves a different purpose - it enables the code 
 
 <Alert type="success">
 
-Learn more about remote runtime logs (logs forwarding) in the [Use the Watch Command](../../core-development-concepts/basics/watch-command#enabling-logs-forwarding) how-to guide.
+Learn more about remote runtime logs (logs forwarding) in the [Use the Watch Command](/docs/{version}/core-development-concepts/basics/watch-command#enabling-logs-forwarding) how-to guide.
 
 </Alert>
 
@@ -110,7 +110,7 @@ Learn more about remote runtime logs (logs forwarding) in the [Use the Watch Com
 
 The existing `InstallationPlugin`, `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` plugins, used to hook into the lifecycle of the Headless CMS installation process, content models and content entries, were removed and replaced with a simpler publish/subscribe (pub/sub) approach.
 
-To learn more more about it, please read our [Lifecycle Events](../../headless-cms/references/lifecycle-events) key topic.
+To learn more more about it, please read our [Lifecycle Events](/docs/{version}/headless-cms/references/lifecycle-events) key topic.
 
 ### Renamed Plugins, Types and Interfaces
 
