--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -78,7 +78,7 @@ new ContextPlugin<Context>(context => {
 });
 ```
 
-For more details on all of the available events, please see the dedicated [Lifecycle Events](../../page-builder/references/lifecycle-events) guide.
+For more details on all of the available events, please see the dedicated [Lifecycle Events](/docs/{version}/page-builder/references/lifecycle-events) guide.
 
 <Alert type="danger">
 
@@ -98,7 +98,7 @@ The [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/packages/
 
 ### Two New `webiny deploy` Hooks ([#2079](https://github.com/webiny/webiny-js/pull/2079))
 
-You can now hook onto the pre-build and post-build events that are emitted during the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command. More information about all related hooks can be found in the new [Build and Deploy Hooks](../../infrastructure/basics/build-and-deploy-hooks) guide.
+You can now hook onto the pre-build and post-build events that are emitted during the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command. More information about all related hooks can be found in the new [Build and Deploy Hooks](/docs/{version}/infrastructure/basics/build-and-deploy-hooks) guide.
 
 ## Documentation
 
