--- a/docs/release-notes/5.29.0/changelog.mdx
+++ b/docs/release-notes/5.29.0/changelog.mdx
@@ -135,7 +135,7 @@ Previously, the `api` folder ([the API project application](/docs/{version}/arch
 
 <Alert type="info" title="Project Applications">
 
-Learn more about project applications and project organization in general, in the [Project Applications and Packages](../../core-development-concepts/project-organization/project-applications-and-packages) key topic.
+Learn more about project applications and project organization in general, in the [Project Applications and Packages](/docs/{version}/core-development-concepts/project-organization/project-applications-and-packages) key topic.
 
 </Alert>
 
