--- a/docs/release-notes/5.32.0/changelog.mdx
+++ b/docs/release-notes/5.32.0/changelog.mdx
@@ -27,7 +27,7 @@ Thanks goes to [@ryohei-kamiya](https://github.com/ryohei-kamiya) for discoverin
 
 <Alert type="info" title="Project Applications">
 
-Learn more about project applications and project organization in general, in the [Project Applications and Packages](../../core-development-concepts/project-organization/project-applications-and-packages) key topic.
+Learn more about project applications and project organization in general, in the [Project Applications and Packages](/docs/{version}/core-development-concepts/project-organization/project-applications-and-packages) key topic.
 
 </Alert>
 
