--- a/docs/release-notes/5.36.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.36.0/upgrade-guide.mdx
@@ -84,6 +84,6 @@ first deploy your changes into one of your pre-production environments, like `de
 <Alert type="info">
 
 Learn more about different deployment environments in the [CI/CD /
-Environments](../../core-development-concepts/ci-cd/environments) key topic.
+Environments](/docs/{version}/core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
