--- a/docs/release-notes/5.4.0/changelog.mdx
+++ b/docs/release-notes/5.4.0/changelog.mdx
@@ -33,7 +33,7 @@ In a couple of different scenarios, performing data filtering on boolean and num
 
 <Alert type="info" title="Headless CMS GraphQL API">
 
-Learn more about the Headless CMS GraphQL API in the [Headless CMS GraphQL API](../../headless-cms/basics/graphql-api) key topic.
+Learn more about the Headless CMS GraphQL API in the [Headless CMS GraphQL API](/docs/{version}/headless-cms/basics/graphql-api) key topic.
 
 </Alert>
 
@@ -51,7 +51,7 @@ With this release, all of the static assets that you upload as part of the **Web
 
 <Alert type="info">
 
-Learn more about the **Website** project application on the cloud infrastructure level in the [Cloud Infrastructure](../../architecture/website/overview) key topics section.
+Learn more about the **Website** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/{version}/architecture/website/overview) key topics section.
 
 </Alert>
 
