--- a/docs/release-notes/5.4.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.4.0/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger">
 
-Before continuing, make sure to take the necessary precautions, listed in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section.
+Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section.
 
 </Alert>
 
@@ -100,7 +100,7 @@ As it was always the case, upon deploying **Website** and **Admin Area** project
 
 Due to website prerendering improvements that the 5.4.0 release brings, in the Amazon S3 bucket that's deployed as part of the **Website** project application, expect to have multiple `static-{RANDOM_ID}` folders - one for each deploy. If you're deploying frequently and you end up having a lot of folders, you might want to schedule a cleanup task, that will delete folders that are no longer in use.
 
-Check out the [Cloud Infrastructure](../../architecture/website/prerendering-pages) key topics section to learn more about all of the resources included in the process.
+Check out the [Cloud Infrastructure](/docs/{version}/architecture/website/prerendering-pages) key topics section to learn more about all of the resources included in the process.
 
 </Alert>
 
