--- a/docs/release-notes/5.5.0/changelog.mdx
+++ b/docs/release-notes/5.5.0/changelog.mdx
@@ -34,7 +34,7 @@ The brand new `webiny watch` command brings local development experience to a wh
 
 #### How We Currently Do It
 
-Let’s say you wanted to expand the default GraphQL API, that’s deployed as part of the [API](../../architecture/api/overview) project application. At the moment, in order to do that, you’d have to do the following:
+Let’s say you wanted to expand the default GraphQL API, that’s deployed as part of the [API](/docs/{version}/architecture/api/overview) project application. At the moment, in order to do that, you’d have to do the following:
 
 - start a watch session on relevant packages using the `webiny workspaces run` command
 - make your code changes
@@ -63,7 +63,7 @@ This basically means **no more digging** through [Amazon CloudWatch](https://aws
 
 <Alert type="info" title="Learn More">
 
-To learn more about the new `webiny watch` command, check out the newly added [Use the Watch Command](../../core-development-concepts/basics/watch-command) guide.
+To learn more about the new `webiny watch` command, check out the newly added [Use the Watch Command](/docs/{version}/core-development-concepts/basics/watch-command) guide.
 
 </Alert>
 
@@ -166,7 +166,7 @@ All the changes can be automatically applied in your existing Webiny project via
 
 #### 1. `.pulumi` Folders Moved To Project Root
 
-By default, the Pulumi cloud infrastructure [state files](../../infrastructure/pulumi-iac/iac-with-pulumi#state-files) are stored locally - in `.pulumi` folders located in your project applications folders:
+By default, the Pulumi cloud infrastructure [state files](/docs/{version}/infrastructure/pulumi-iac/iac-with-pulumi#state-files) are stored locally - in `.pulumi` folders located in your project applications folders:
 
 ```bash
 api/.pulumi
@@ -190,7 +190,7 @@ We've seen some users storing the `.pulumi` folders in an internal Amazon S3 buc
 
 <Alert type="warning">
 
-As noted in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section, please test your changes in pre-production environments first.
+As noted in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section, please test your changes in pre-production environments first.
 
 </Alert>
 
@@ -210,7 +210,7 @@ Every project application now has its own `webiny.application.js` file. Think of
 
 <Alert type="info">
 
-Learn more about project applications in the [Project Applications](../../core-development-concepts/project-organization/project-applications) guide.
+Learn more about project applications in the [Project Applications](/docs/{version}/core-development-concepts/project-organization/project-applications) guide.
 
 </Alert>
 
