--- a/docs/release-notes/5.5.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.5.0/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger">
 
-Before continuing, make sure to take the necessary precautions, listed in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section.
+Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section.
 
 </Alert>
 
@@ -48,7 +48,7 @@ Running this command will apply a minor fix to the `webiny upgrade` command that
 
 </Alert>
 
-This release includes a couple of smaller changes on the project organization level. To make it easier, we provide a simple [Webiny CLI](../../core-development-concepts/basics/webiny-cli) command that will automatically make all the necessary adjustments for you.
+This release includes a couple of smaller changes on the project organization level. To make it easier, we provide a simple [Webiny CLI](/docs/{version}/core-development-concepts/basics/webiny-cli) command that will automatically make all the necessary adjustments for you.
 
 Once you've run the above upgrade command, run the following:
 
@@ -67,7 +67,7 @@ Before running the `webiny upgrade` command, we recommend that you commit any ac
 
 Once the `webiny upgrade` command has finished, a couple of manual steps remain to be completed, after which, your project should be completely updated.
 
-You can then proceed by committing the changes to your working branch and trying to [deploy](../../core-development-concepts/basics/project-deployment) the project to one of the development or pre-production environment.
+You can then proceed by committing the changes to your working branch and trying to [deploy](/docs/{version}/core-development-concepts/basics/project-deployment) the project to one of the development or pre-production environment.
 
 #### 1. Add `apolloLinks.ts` file (located in your Website project application)
 
