--- a/docs/release-notes/5.6.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.6.0/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger">
 
-Before continuing, make sure to take the necessary precautions, listed in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section.
+Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section.
 
 </Alert>
 
