--- a/docs/release-notes/5.7.0/changelog.mdx
+++ b/docs/release-notes/5.7.0/changelog.mdx
@@ -25,17 +25,17 @@ With this release, we're introducing a brand new CI/CD scaffold, which will set 
 
 Currently, you can set up your CI/CD via [GitHub Actions](https://github.com/features/actions) only. But note that in the future, we would certainly like to bring support for more providers, depending on the interest from the community.
 
-For more information on how to use the new scaffold, make sure to check out the also new [Set up CI/CD](../../core-development-concepts/ci-cd/setup) how-to guide.
+For more information on how to use the new scaffold, make sure to check out the also new [Set up CI/CD](/docs/{version}/core-development-concepts/ci-cd/setup) how-to guide.
 
 <Alert type="success">
 
-If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in the new [CI/CD](../../core-development-concepts/ci-cd/introduction) key topics section. Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues/new) or [contact us](https://www.webiny.com/slack).
+If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in the new [CI/CD](/docs/{version}/core-development-concepts/ci-cd/introduction) key topics section. Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues/new) or [contact us](https://www.webiny.com/slack).
 
 </Alert>
 
 ### Improved `--debug` Argument (`webiny deploy` and `webiny destroy` Commands) ([#1624](https://github.com/webiny/webiny-js/pull/1624), [@ankurvr](https://github.com/ankurvr))
 
-From this release, passing the `--debug` flag upon running the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) and [`webiny destroy`](../../infrastructure/basics/destroy-cloud-infrastructure) commands will also include additional deployment-related information and logs.
+From this release, passing the `--debug` flag upon running the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) and [`webiny destroy`](/docs/{version}/infrastructure/basics/destroy-cloud-infrastructure) commands will also include additional deployment-related information and logs.
 
 The following example shows how you can use it with the `webiny deploy` command:
 
@@ -79,12 +79,12 @@ Starting with this `5.7.0` release, we'll be experimenting more and more in this
 
 ### New CI/CD Key Topics
 
-We've just published the brand new [CI/CD](../../core-development-concepts/ci-cd/introduction) key topics section, which, as you might've already guessed, covers everything that there is to know about setting up a CI/CD workflow for your Webiny projects.
+We've just published the brand new [CI/CD](/docs/{version}/core-development-concepts/ci-cd/introduction) key topics section, which, as you might've already guessed, covers everything that there is to know about setting up a CI/CD workflow for your Webiny projects.
 
 ### Security Framework Key Topics
 
-We've finally put together several articles explaining what [Webiny Security Framework](../../core-development-concepts/security-framework/introduction) is and how everything is tied together on both API and React side.
+We've finally put together several articles explaining what [Webiny Security Framework](/docs/{version}/core-development-concepts/security-framework/introduction) is and how everything is tied together on both API and React side.
 
 ### Multi-Tenancy Key Topic
 
-Learn about [multi-tenancy](../../overview/features/multi-tenancy) in Webiny. Note that this feature requires an Enterprise License. If you're a company interested in building multi-tenancy applications, [get in touch](https://calendly.com/webiny/30min).
+Learn about [multi-tenancy](/docs/{version}/overview/features/multi-tenancy) in Webiny. Note that this feature requires an Enterprise License. If you're a company interested in building multi-tenancy applications, [get in touch](https://calendly.com/webiny/30min).
