--- a/docs/release-notes/5.7.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.7.0/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger">
 
-Before continuing, make sure to take the necessary precautions, listed in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section.
+Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section.
 
 </Alert>
 
@@ -306,4 +306,4 @@ export default () => [
 
 ## Redeploy!
 
-Now you're ready to redeploy your API and apps. By now, you're most likely familiar with the deployment process, but if you need a refresher, visit our [Deploy Your Project](../../core-development-concepts/basics/project-deployment) guide for everything related to deployments.
+Now you're ready to redeploy your API and apps. By now, you're most likely familiar with the deployment process, but if you need a refresher, visit our [Deploy Your Project](/docs/{version}/core-development-concepts/basics/project-deployment) guide for everything related to deployments.
