--- a/docs/release-notes/5.9.0/changelog.mdx
+++ b/docs/release-notes/5.9.0/changelog.mdx
@@ -31,7 +31,7 @@ To learn more about the changes we made and the reasoning behind them, check out
 
 <Alert type="info">
 
-To learn more about scaffolding and all of the available scaffolds, check out the [Scaffolding](../../core-development-concepts/scaffolding/introduction) how-to guides section.
+To learn more about scaffolding and all of the available scaffolds, check out the [Scaffolding](/docs/{version}/core-development-concepts/scaffolding/introduction) how-to guides section.
 
 </Alert>
 
