--- a/docs/user-guides/5.35.x/form-builder/essentials/using-reCAPTCHA-in-form.mdx
+++ b/docs/user-guides/5.35.x/form-builder/essentials/using-reCAPTCHA-in-form.mdx
@@ -31,7 +31,7 @@ Webiny enables you to effortlessly integrate reCAPTCHA into your web app and lev
 
 3. In the **Domain** textbox, type *your domain* (e.g. **https://www.webiny.com**).
 
-	**Note**: In this tutorial, we will use the domain where your web app is published. Please note that this domain is different from the one where your Webiny CMS runs. You can find the published web app domain by visiting any published page, such as the **Contact Us** page that we created in the [Create Form](../url) tutorial (e.g. https://d3s7islumczq2q.cloudfront.net). 
+	**Note**: In this tutorial, we will use the domain where your web app is published. Please note that this domain is different from the one where your Webiny CMS runs. You can find the published web app domain by visiting any published page, such as the **Contact Us** page that we created in the [Create Form](./create-form) tutorial (e.g. https://d3s7islumczq2q.cloudfront.net). 
 
 4. Click **Don't have a site key?** below the **Google reCAPTCHA site key** textbox.
 
@@ -70,7 +70,7 @@ Webiny enables you to effortlessly integrate reCAPTCHA into your web app and lev
 
 	✔️ The **Forms** screen opens.
 
-2. On the **Forms** screen, click the **Contact Form** list item in the list of forms that we created in the [Create Form](../url) tutorial.
+2. On the **Forms** screen, click the **Contact Form** list item in the list of forms that we created in the [Create Form](./create-form) tutorial.
 
     ✔️ The **FORM PREVIEW** tab opens.
 
@@ -97,7 +97,7 @@ Webiny enables you to effortlessly integrate reCAPTCHA into your web app and lev
 
     ✔️ The **Pages** screen opens.
 
-2. Click the **Contact Us** list item in the list of pages that we created in the [Create Form](../url) tutorial.
+2. Click the **Contact Us** list item in the list of pages that we created in the [Create Form](./create-form) tutorial.
 
     ✔️ The **PAGE PREVIEW** tab opens.
 
