--- a/docs/developer-docs/5.28.x/enterprise/multi-tenancy.mdx
+++ b/docs/developer-docs/5.28.x/enterprise/multi-tenancy.mdx
@@ -36,7 +36,7 @@ The following sections guide you through the process in a step-by-step manner.
 ## 1) Prepare the Project
 
 Your project needs to be at version `5.19.0` to use this feature.
-Please follow the [upgrade guide](../release-notes/upgrade-webiny) to upgrade your project to the appropriate version.
+Please follow the [upgrade guide](/docs/{version}/release-notes/upgrade-webiny) to upgrade your project to the appropriate version.
 
 Alternatively, you can create a new `>=5.19.0` project, by running:
 
