--- a/docs/developer-docs/5.29.x/enterprise/okta-integration.mdx
+++ b/docs/developer-docs/5.29.x/enterprise/okta-integration.mdx
@@ -29,7 +29,7 @@ Okta integration replaces the default Cognito setup, and allows companies to man
 ## 1) Prepare the Project
 
 Your project needs to be at version `5.22.0` to use this feature.
-Please follow the [upgrade guide](../release-notes/upgrade-webiny) to upgrade your project to the appropriate version.
+Please follow the [upgrade guide](/docs/{version}/release-notes/upgrade-webiny) to upgrade your project to the appropriate version.
 
 Alternatively, you can create a new `>=5.22.0` project, by running:
 
