--- a/docs/release-notes/5.11.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.11.0/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger">
 
-Before continuing, make sure to take the necessary precautions, listed in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section.
+Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section.
 
 </Alert>
 
@@ -60,13 +60,13 @@ yarn webiny deploy --env {environment}
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](../../release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
 <Alert type="success">
 
-Learn more about different deployment environments in the [CI/CD / Environments](../../core-development-concepts/ci-cd/environments) key topic.
+Learn more about different deployment environments in the [CI/CD / Environments](/docs/{version}/core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
 
@@ -76,15 +76,15 @@ Learn more about different deployment environments in the [CI/CD / Environments]
 
 <Alert type="danger">
 
-As stated in the [Upgrade Webiny](../../release-notes/upgrade-webiny#pre-production-environments-first) section, to prevent any data loss or other critical problems that might occur while upgrading, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, to prevent any data loss or other critical problems that might occur while upgrading, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
-As mentioned in the [changelog](/docs/{version}/release-notes/5.11.0/changelog), from the 5.11.0 release, all Webiny projects will use [Pulumi](../../infrastructure/pulumi-iac/iac-with-pulumi) v3.
+As mentioned in the [changelog](/docs/{version}/release-notes/5.11.0/changelog), from the 5.11.0 release, all Webiny projects will use [Pulumi](/docs/{version}/infrastructure/pulumi-iac/iac-with-pulumi) v3.
 
 In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind.
 
-Once you've run the above shown `webiny upgrade` command, the existing Pulumi CLI should automatically be removed from your project. And, upon redeploying your Webiny project (using the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) command), the new Pulumi CLI should be downloaded and installed, again automatically.
+Once you've run the above shown `webiny upgrade` command, the existing Pulumi CLI should automatically be removed from your project. And, upon redeploying your Webiny project (using the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command), the new Pulumi CLI should be downloaded and installed, again automatically.
 
 Furthermore, during the first deployment, in case you didn't make any changes that would affect the deployment, you should only see a change in `provider` for each cloud infrastructure resource:
 
