--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -23,7 +23,7 @@ The majority of changes that were introduced in this release are related to the 
 
 <Alert type="success" title="Amazon DynamoDB-only version of Webiny">
 
-[In case you missed it](../../architecture/api/overview), at the moment, Webiny relies on both [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) and [Amazon OpenSearch Service](https://aws.amazon.com/opensearch-service/the-elk-stack/what-is-elasticsearch/) databases in order to store and retrieve data. And while this is definitely a good choice for larger projects, for smaller and mid-sized projects, we'll be introducing an Amazon DynamoDB-only version of Webiny. For now there are no official estimates when this will be available, but we can definitely say that a very large amount of work has already been done.
+[In case you missed it](/docs/{version}/architecture/api/overview), at the moment, Webiny relies on both [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) and [Amazon OpenSearch Service](https://aws.amazon.com/opensearch-service/the-elk-stack/what-is-elasticsearch/) databases in order to store and retrieve data. And while this is definitely a good choice for larger projects, for smaller and mid-sized projects, we'll be introducing an Amazon DynamoDB-only version of Webiny. For now there are no official estimates when this will be available, but we can definitely say that a very large amount of work has already been done.
 
 </Alert>
 
@@ -90,7 +90,7 @@ A special shout out to [@nelsonchen5](https://github.com/nelsonchen5) for sortin
 
 <Alert type="success">
 
-Learn more about different types of the Headless CMS GraphQL API in [this key topic](../../headless-cms/basics/graphql-api).
+Learn more about different types of the Headless CMS GraphQL API in [this key topic](/docs/{version}/headless-cms/basics/graphql-api).
 
 </Alert>
 
