--- a/docs/release-notes/5.19.0/changelog.mdx
+++ b/docs/release-notes/5.19.0/changelog.mdx
@@ -15,7 +15,7 @@ In attempt to make things a bit more stable, we've decided to put a lock on the 
 
 <Alert type="info">
 
-`@pulumi/*` NPM packages are being utilized by Pulumi, the underlying infrastructure-as-code (IaC) solution Webiny relies on. To learn more, check out the [Infrastructure as Code With Pulumi](../../infrastructure/pulumi-iac/iac-with-pulumi) key topic.
+`@pulumi/*` NPM packages are being utilized by Pulumi, the underlying infrastructure-as-code (IaC) solution Webiny relies on. To learn more, check out the [Infrastructure as Code With Pulumi](/docs/{version}/infrastructure/pulumi-iac/iac-with-pulumi) key topic.
 
 </Alert>
 
@@ -33,7 +33,7 @@ Thank you goes to [**@snstanton**](https://github.com/snstanton) for discovering
 
 ### Fixed Incorrect AWS Profile Being Logged During Deployment ([#2078](https://github.com/webiny/webiny-js/pull/2078))
 
-In order to use the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) command, AWS credentials need to be set, which can be done in [multiple ways](../../infrastructure/aws/configure-aws-credentials).
+In order to use the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command, AWS credentials need to be set, which can be done in [multiple ways](/docs/{version}/infrastructure/aws/configure-aws-credentials).
 
 When relying on environment variables, users can choose to either use a combination of `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`, or a single `AWS_PROFILE` variable. In case of the former, we've noticed that, during deployment, an incorrect message would get displayed in the terminal, saying AWS profile "undefined" is being used.
 
@@ -55,7 +55,7 @@ The `acl` property lets you set **Canned ACL** for every uploaded file. To learn
 
 ### `webiny deploy` Command - Introduced `--deploy` Flag ([#2096](https://github.com/webiny/webiny-js/pull/2096))
 
-A new `--deploy` flag has been added to the [`webiny deploy`](../../core-development-concepts/basics/project-deployment).
+A new `--deploy` flag has been added to the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment).
 
 By setting it to false (by passing `--no-deploy`), this small addition allows users to skip the deployment step, which can be useful if they only want to build the specified project application. For example:
 
