--- a/docs/release-notes/5.22.1/upgrade-guide.mdx
+++ b/docs/release-notes/5.22.1/upgrade-guide.mdx
@@ -39,12 +39,12 @@ yarn webiny deploy --env {environment}
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](../../release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
 <Alert type="success">
 
-Learn more about different deployment environments in the [CI/CD / Environments](../../core-development-concepts/ci-cd/environments) key topic.
+Learn more about different deployment environments in the [CI/CD / Environments](/docs/{version}/core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
