--- a/docs/release-notes/5.30.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.30.0/upgrade-guide.mdx
@@ -64,6 +64,6 @@ As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-
 
 <Alert type="info">
 
-Learn more about different deployment environments in the [CI/CD / Environments](../../core-development-concepts/ci-cd/environments) key topic.
+Learn more about different deployment environments in the [CI/CD / Environments](/docs/{version}/core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
