--- a/docs/release-notes/5.8.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.8.0/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger">
 
-Before continuing, make sure to take the necessary precautions, listed in the [Overview](../../release-notes/upgrade-webiny#-precaution-measures) section.
+Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/{version}/release-notes/upgrade-webiny#-precaution-measures) section.
 
 </Alert>
 
@@ -70,7 +70,7 @@ If the upgrade wizard does not show, try clearing cookies, local storage, and lo
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](../../release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
