chore: update links to absolute paths

--- a/docs/user-guides/5.35.x/form-builder/essentials/create-form.mdx
+++ b/docs/user-guides/5.35.x/form-builder/essentials/create-form.mdx
@@ -66,7 +66,7 @@ Webiny allows you to easily design and customize forms to seamlessly gather and 
 
 ## Step 2: Embed the Form
 
-To use a form, you need to embed it into a page. In this step, we we will embed the form into a page using the Page Builder. If you are not familiar with how to create a page, please follow the [Create Page](../../page-builder/essentials/create-page) tutorial.
+To use a form, you need to embed it into a page. In this step, we we will embed the form into a page using the Page Builder. If you are not familiar with how to create a page, please follow the [Create Page](/docs/{version}/user-guides/page-builder/essentials/create-page) tutorial.
 
 1. From the **Side Menu**, click **Page Builder** > **PAGES** > **Pages**.
 
