--- a/docs/user-guides/5.35.x/headless-cms/essentials/add-validator-to-fields.mdx
+++ b/docs/user-guides/5.35.x/headless-cms/essentials/add-validator-to-fields.mdx
@@ -17,7 +17,7 @@ import addValidatorsToFields from "./assets/add-validator-to-fields/add-validato
 A field validator helps you ensure the user input meets specific requirements and matches the expected format for a field.
 
 In this tutorial, we will learn how to add validators to a content model's fields.
-As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields used in the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields used in the **Product** content model that we created in the [Create Content Model](/docs/{version}/user-guides/essentials/create-content-model) tutorial.
 
 <Video src={addValidatorsToFields} controls={true}/>
 
