--- a/docs/user-guides/5.35.x/page-builder/essentials/page-revisions.mdx
+++ b/docs/user-guides/5.35.x/page-builder/essentials/page-revisions.mdx
@@ -26,7 +26,7 @@ We will do this in 4 steps:
 
 ## Step 1: Create a New Page
 
-If you are not familiar with how to create a page, please follow the [Create Page](../essentials/create-page) tutorial.
+If you are not familiar with how to create a page, please follow the [Create Page](/docs/{version}/user-guides/essentials/create-page) tutorial.
 
 1. From the **Side Menu**, click **Page Builder** > **PAGES** > **Pages**.
 
