--- a/docs/user-guides/5.35.x/page-builder/essentials/seo-and-social-sharing.mdx
+++ b/docs/user-guides/5.35.x/page-builder/essentials/seo-and-social-sharing.mdx
@@ -21,7 +21,7 @@ In this tutorial, we will learn how to edit SEO and social sharing settings of a
 <Video src={seoSocialSettings} controls={true} />
 
 ## Prerequisites
-To follow this tutorial you need the **The benefits of a Serverless CMS** page. If you haven't created this page, please follow the [Create Page](../essentials/create-page) tutorial to create it.
+To follow this tutorial you need the **The benefits of a Serverless CMS** page. If you haven't created this page, please follow the [Create Page](/docs/{version}/user-guides/essentials/create-page) tutorial to create it.
 
 ## Step 1: Edit Social Sharing Settings
 
