--- a/docs/user-guides/5.35.x/headless-cms/essentials/content-entry-revisions.mdx
+++ b/docs/user-guides/5.35.x/headless-cms/essentials/content-entry-revisions.mdx
@@ -16,7 +16,7 @@ import contentEntryRevision from "./assets/content-entry-revisions/content-entry
 In Webiny, each modification in a content entry that is saved or published is stored as a separate revision.
 In this tutorial, we will learn how to create multiple revisions of a content entry and publish a specific revision.
 We will also learn how to create a new content entry version from a previous revision.
-As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+As an example, we will use the **Product** content model that we created in the [Create Content Model](/docs/{version}/user-guides/essentials/create-content-model) tutorial.
 
 <Video src={contentEntryRevision} controls={true}/>
 
@@ -27,7 +27,7 @@ We will do this in 3 steps:
 
 ## Step 1: Create a Content Entry and Its Revisions
 
-If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
+If you are not familiar with how to create a content entry, please follow the [Create Content Entry](/docs/{version}/user-guides/essentials/create-content-entry) tutorial.
 
 1. Create a content entry in the **Product** content model with the following attributes:
 
@@ -38,7 +38,7 @@ If you are not familiar with how to create a content entry, please follow the [C
     | Price       | **15**                                                             |
     | Category    | **Clothes**                                                        |
 
-    **Note**: If you haven't added the **Category** field to the **Product** content model, skip it (or add it by following the [Reference Field](../essentials/reference-field) tutorial).
+    **Note**: If you haven't added the **Category** field to the **Product** content model, skip it (or add it by following the [Reference Field](/docs/{version}/user-guides/essentials/reference-field) tutorial).
 
 2. Now, update the **Name** and **Description** textboxes with the following values:
 
