chore: update release notes links to absolute paths

--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -126,7 +126,7 @@ For starters, we've introduced the `--allow-production` flag for the [`webiny wa
 
 Speaking of the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command, we've also made the logs displayed in the **Deploy** pane a bit cleaner and nicer:
 
-![webiny watch Command - The Improved Deploy Pane](./changelog/watch-deploy-pane-improvement.png)
+![webiny watch Command - The Improved Deploy Pane](/docs/{version}/release-notes/5.16.0/changelog/watch-deploy-pane-improvement.png)
 
 Finally, the [Full Stack Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application) scaffold should now work correctly on Windows operating system.
 
