--- a/docs/release-notes/5.38.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.38.0/upgrade-guide.mdx
@@ -14,7 +14,7 @@ import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="info">
 
-Make sure to check out the [5.38.0 changelog](./changelog) to get familiar with the changes introduced in this
+Make sure to check out the [5.38.0 changelog](/docs/{version}/release-notes/5.38.0/changelog) to get familiar with the changes introduced in this
 release.
 
 </Alert>
