--- a/docs/release-notes/5.33.4/upgrade-guide.mdx
+++ b/docs/release-notes/5.33.4/upgrade-guide.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info">
 
-Make sure to check out the [5.33.4 changelog](./changelog) to get familiar with the changes introduced in this release.
+Make sure to check out the [5.33.4 changelog](/docs/{version}/release-notes/5.33.4/changelog) to get familiar with the changes introduced in this release.
 
 </Alert>
 
@@ -44,7 +44,7 @@ Make sure you deploy your entire Webiny project using the command shown above. Y
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/5.33.4/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
