--- a/docs/release-notes/5.36.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.36.0/upgrade-guide.mdx
@@ -24,7 +24,7 @@ guide](/docs/release-notes/5.29.0/project-setup-migration).
 
 <Alert type="info">
 
-Make sure to check out the [5.36.0 changelog](./changelog) to get familiar with the changes introduced in this
+Make sure to check out the [5.36.0 changelog](/docs/{version}/release-notes/5.36.0/changelog) to get familiar with the changes introduced in this
 release.
 
 </Alert>
@@ -76,7 +76,7 @@ system. Partial deploys may cause the upgrade to be applied incorrectly.
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you
+As stated in the [Upgrade Webiny](/docs/{version}/release-notes/5.36.0/upgrade-webiny#pre-production-environments-first) section, we recommend that you
 first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
