--- a/docs/release-notes/5.37.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.37.0/upgrade-guide.mdx
@@ -26,7 +26,7 @@ guide](/docs/release-notes/5.29.0/project-setup-migration).
 
 <Alert type="info">
 
-Make sure to check out the [5.37.0 changelog](./changelog) to get familiar with the changes introduced in this
+Make sure to check out the [5.37.0 changelog](/docs/{version}/release-notes/5.37.0/changelog) to get familiar with the changes introduced in this
 release.
 
 </Alert>
@@ -74,7 +74,7 @@ yarn webiny deploy --env {environment}
 
 ### Updating Your Custom API Plugins
 
-As described in the changelog, there's now a new lifecycle event, [onTenantAfterInstall](./changelog#add-on-tenant-after-install-lifecycle-event-3377), which serves as a single, reliable place to hook into Webiny app installation for each tenant, and add things like initial data setup, etc. If you're currently using events like `pageBuilder.onSystemAfterInstall`, or `cms.onSystemAfterInstall`, we highly recommend updating your code to use the new event `tenancy.onTenantAfterInstall`.
+As described in the changelog, there's now a new lifecycle event, [onTenantAfterInstall](/docs/{version}/release-notes/5.37.0/changelog#add-on-tenant-after-install-lifecycle-event-3377), which serves as a single, reliable place to hook into Webiny app installation for each tenant, and add things like initial data setup, etc. If you're currently using events like `pageBuilder.onSystemAfterInstall`, or `cms.onSystemAfterInstall`, we highly recommend updating your code to use the new event `tenancy.onTenantAfterInstall`.
 
 The reason this is important to do is that, with the `5.37.0` release, we changed the order of app installation, and moved the Headless CMS app to be one of the first ones to be installed, because now File Manager depends on the Headless CMS. This change should only take a few moments to do, but it will make your system much more reliable, and future-proof.
 
