--- a/docs/developer-docs/shared/performance-and-load-benchmark/introduction.mdx
+++ b/docs/developer-docs/shared/performance-and-load-benchmark/introduction.mdx
@@ -21,9 +21,9 @@ With this performance benchmark we wanted to show how well Webiny can handle the
 
 Webiny has several apps and APIs. For this benchmark we decided to pick 3 actions we felt are most relevant:
 
-1. Call the Headless CMS Manage API and insert a new record ([view results](../performance-and-load-benchmark/headless-cms/write-benchmark))
-2. Call the Headless CMS Preview API and retrieve a record ([view results](../performance-and-load-benchmark/headless-cms/read-benchmark))
-3. Deliver a page created by the Page Builder ([view results](../performance-and-load-benchmark/page-builder/deliver-a-page))
+1. Call the Headless CMS Manage API and insert a new record ([view results](/docs/{version}/performance-and-load-benchmark/headless-cms/write-benchmark))
+2. Call the Headless CMS Preview API and retrieve a record ([view results](/docs/{version}/performance-and-load-benchmark/headless-cms/read-benchmark))
+3. Deliver a page created by the Page Builder ([view results](/docs/{version}/performance-and-load-benchmark/page-builder/deliver-a-page))
 
 The tests on the Headless CMS API provide a good reference on both how the Headless CMS scales and performs, but the same performance can be expected if you were to create a custom API endpoint on Webiny, not using the Headless CMS. The performance of the Preview API is expected to be identical to the Read API. We picked the Preview API because it was easier to setup the test since we didn't need to publish records after we inserted them.
 
