chore: fix broken links

--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -5,8 +5,6 @@ description: See what's new in Webiny version 5.16.0.
 
 import { Alert } from "@/components/Alert";
 import watchDeployPaneImprovement from "./changelog/watch-deploy-pane-improvement.png";
-import exportPageUI from "./changelog/export-page-demo.gif";
-import importPageUI from "./changelog/import-page-demo.gif";
 
 # Changes
 
@@ -110,7 +108,7 @@ For every Webiny project, the framework is downloaded automatically, and, prior 
 - running the `yarn` command to reinstall project's dependencies would cause the downloaded binaries to be removed, making the user re-download the Pulumi CLI
 - while in runtime, Pulumi CLI can store sensitive files in this directory, which can create different deployment and security-related issues
 
-Because of these, from now on, all of the Pulumi CLI related binaries will be downloaded into the `.webiny/pulumi-cli` folder, located in your project root.
+Because of these, from now on, all the Pulumi CLI related binaries will be downloaded into the `.webiny/pulumi-cli` folder, located in your project root.
 
 <Alert type="info">
 
@@ -126,7 +124,7 @@ For starters, we've introduced the `--allow-production` flag for the [`webiny wa
 
 Speaking of the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command, we've also made the logs displayed in the **Deploy** pane a bit cleaner and nicer:
 
-![webiny watch Command - The Improved Deploy Pane](/docs/{version}/release-notes/5.16.0/changelog/watch-deploy-pane-improvement.png)
+<Image src={watchDeployPaneImprovement} title={"webiny watch Command - The Improved Deploy Pane"} />
 
 Finally, the [Full Stack Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application) scaffold should now work correctly on Windows operating system.
 
