--- a/src/docs/5.28.x/overview/applications/apw.mdx
+++ b/src/docs/5.28.x/overview/applications/apw.mdx
@@ -4,6 +4,7 @@ description: A workflow driven publishing process.
 ---
 
 import { Alert } from "@/components/Alert";
+import YouTube from "@/components/YouTube";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -11,13 +12,8 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-<Alert type="warning" title="BETA">
 
-This application is currently in Beta testing. In case you wish to join the waiting list, please reach out to sales@webiny.com.
-
-</Alert>
-
-![Webiny CMS - Advanced Publishing Workflow](./assets/webiny-apw.png)
+<YouTube id="NNRghN1yY_g" />
 
 The Advanced Publishing Workflow (APW) is an application that runs on top of the Page Builder and the Headless CMS. By default, those applications come with a simplified publishing workflow. For example, users can either publish content or set it in a `review requested` state. The actual review is done outside the system, and there's no collaboration platform that's provided to manage this activity.
 This is where the APW comes in.
