--- a/src/docs/5.28.x/overview/applications/headless-cms.mdx
+++ b/src/docs/5.28.x/overview/applications/headless-cms.mdx
@@ -54,6 +54,12 @@ Each attribute can be of a different type. The included types are:
   - Nested object field
   - Inside this field you can place multiple other fields such as text, file and others
   - You can nest objects to as many depth levels as you need
+- **Dynamic zone**
+  - A dynamic zone is a field that can contain multiple other fields
+  - The difference between a dynamic zone and an object is that a dynamic zone allows you to select which fields you want to use
+  - This is useful when you have a content model that has a lot of fields, but you only want to use a few of them in a particular entry
+  - You can also nest dynamic zones to as many depth levels as you need
+  - See Dynamic Zone in action: [https://www.youtube.com/watch?v=8Z3Z3Y5Q5Zo](https://www.youtube.com/watch?v=4hOScz42_Nw)
 
 Besides the default built-in attributes, you can expand Webiny with custom plugins that introduce new fields.
 
